FIX wizard trail arrow z-index

--- a/modules_css/ae_petition_wizard.less
+++ b/modules_css/ae_petition_wizard.less
@@ -218,7 +218,7 @@
                     position: absolute;
                     top: 0;
                     left: 100%;
-                    z-index: 99;
+                    z-index: 1;
                 }
             }
         }
